# nao_ros_cowriter

./: README.md
shape_learning/nodes/: nao_camera.py
shape_learning/nodes/display_manager/: CMakeLists.txt  package.xml
shape_learning/nodes/display_manager/include/: shape_display_manager.py
shape_learning/nodes/display_manager/src/: display_manager_server.py
shape_learning/nodes/shape_learning/: CMakeLists.txt  package.xml
shape_learning/nodes/shape_learning/include/: state_machine.py
shape_learning/nodes/shape_learning_interaction/: CMakeLists.txt  package.xml
shape_learning/nodes/shape_learning_interaction/launch/: nao_learning.launch
shape_learning/nodes/shape_learning_interaction/nodes/: display_manager_server.py  gesture_manager.py  learning_words_nao.py
shape_learning/scripts/: detect_words.py  gesture_manager.py  shape_display_manager.py  shape_learner.py  shape_learner_manager.py  shape_learning.py  shape_modeler.py
trajectory_following/: README.md
trajectory_following/nodes/nao_trajectory_following/: CMakeLists.txt
trajectory_following/nodes/nao_trajectory_following/launch/: message_echoer_nao.launch  nao_writing_on_surface.launch
trajectory_following/nodes/nao_trajectory_following/nodes/: message_echoer_nao.py  nao_writer_naoqi.py  trajectory_visualizer.py  writing_surface_positioner.py
trajectory_following/scripts/: message_echoer_nao.py  nao_write_moveit.py  nao_write_naoqi.py  place_paper.py  publish_traj.py  show_tablet.py  show_traj_onebyone.py  trajectory_visualizer.py  writing_surface_positioner.py
utils/: state_machine.py  watchdog.py
utils/nodes/watchdog/: CMakeLists.txt  package.xml
utils/scripts/: watchdog_clearer.py
