<?xml version="1.0"?>
<package>
  <name>watchdog</name>
  <version>0.0.0</version>
  <description>A package for a display_manager_server which uses services 
    to interface with a display_manager object</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="deanna.m.good@gmail.com">Deanna Hood</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <author email="deanna.m.good@gmail.com">Deanna Hood</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
